Better file structure, stuff is better in general

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,17 +2,16 @@
 #     Logan Hunt
 # Summary:
 #     Play the game asteroids
-# Above and Beyond
+# Above and Beyond (Extra Credit)
 #	  Changed colors
-#     Added fuel     
+#     Added fuel
 #        rotation: -1 units/frame
 #        movement: -3 units/frame
-#     Made sure that initially, trajectories of rocks will 
+#     Made sure that initially, trajectories of spawned rocks will
 #        not hit ship
 #     There's a chance of medium asteroids spawning at the start
 #     The initial amount of large rocks is random
 ###############################################################
-
 
 LFLAGS = -lglut -lGLU -lGL
 
@@ -34,34 +33,34 @@ a.out: driver.o game.o uiInteract.o uiDraw.o point.o velocity.o flyingObject.o s
 #    bullet.o       The bullets fired from the ship
 #    rocks.o        Contains all of the Rock classes
 ###############################################################
-uiDraw.o: uiDraw.cpp uiDraw.h
+uiDraw.o: uiDraw.cpp ../include/uiDraw.h
 	g++ -c uiDraw.cpp
 
-uiInteract.o: uiInteract.cpp uiInteract.h
+uiInteract.o: uiInteract.cpp ../include/uiInteract.h
 	g++ -c uiInteract.cpp
 
-point.o: point.cpp point.h
+point.o: point.cpp ../include/point.h
 	g++ -c point.cpp
 
-driver.o: driver.cpp game.h
+driver.o: driver.cpp ../include/game.h
 	g++ -c driver.cpp
 
-game.o: game.cpp game.h uiDraw.h uiInteract.h point.h velocity.h flyingObject.h bullet.h rocks.h ship.h
+game.o: game.cpp ../include/game.h ../include/uiDraw.h ../include/uiInteract.h ../include/point.h ../include/velocity.h ../include/flyingObject.h ../include/bullet.h ../include/rocks.h ../include/ship.h
 	g++ -c game.cpp
 
-velocity.o: velocity.cpp velocity.h point.h
+velocity.o: velocity.cpp ../include/velocity.h ../include/point.h
 	g++ -c velocity.cpp
 
-flyingObject.o: flyingObject.cpp flyingObject.h point.h velocity.h uiDraw.h
+flyingObject.o: flyingObject.cpp ../include/flyingObject.h ../include/point.h ../include/velocity.h ../include/uiDraw.h
 	g++ -c flyingObject.cpp
 
-ship.o: ship.cpp ship.h flyingObject.h point.h velocity.h uiDraw.h
+ship.o: ship.cpp ../include/ship.h ../include/flyingObject.h ../include/point.h ../include/velocity.h ../include/uiDraw.h
 	g++ -c ship.cpp
 
-bullet.o: bullet.cpp bullet.h flyingObject.h point.h velocity.h uiDraw.h
+bullet.o: bullet.cpp ../include/bullet.h ../include/flyingObject.h ../include/point.h ../include/velocity.h ../include/uiDraw.h
 	g++ -c bullet.cpp
 
-rocks.o: rocks.cpp rocks.h flyingObject.h point.h velocity.h uiDraw.h
+rocks.o: rocks.cpp ../include/rocks.h ../include/flyingObject.h ../include/point.h ../include/velocity.h ../include/uiDraw.h
 	g++ -c rocks.cpp
 
 ###############################################################
